--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
     <title>BattleShip</title>
 </head>
 <body>
-    <p>Hello World</p>
+    <div id="title">
+        <p>BattleShip</p>
+    </div>
+
+    <div id="mainContainer">
+
+    </div>
+
+    <div id="footer">
+
+    </div>
 </body>
 </html>
