--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
     <title>BattleShip</title>
 </head>
 <body>
+
+    <audio id="shotFired" src="./soundEffects/shotFired.mp3"></audio>
+    <audio id="shotHit" src="./soundEffects/shotHit.mp3"></audio>
+    <audio id="shotMissed" src="./soundEffects/shotMissed.mp3"></audio>
+
     <div id="title">
-        <p>BattleShip</p>
+        <p>Battleship</p>
     </div>
 
     <div id="mainContainer">
