coded y Axis and added some style

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <div id="mainContainer">
         <form id="introForm">
             <label for="name">Enter player name:</label>
-            <input type="text" name="name" id="playerName" placeholder="BattleShip Combatant">
+            <input type="text" name="name" id="playerName" placeholder="BattleShip Combatant" maxlength="15">
             <button id="submitBtn"> Start Game</button>
         </form>
     </div>
